...
      </Button>
      <Button
        variant="ghost"
        size="large"
        wrapText
        onPress={continueOnDevice}
        testID="continue-on-device-button"
      >
        {t("newOwnerOnboarding.account.continueOnDevice")}
      </Button>
    </OnboardingScreen>
  );
}
...
