...
          showsVerticalScrollIndicator={false}
        >
          {headerAccessory}
          <Pressable
            accessible={false}
            onPress={Keyboard.dismiss}
            testID="dismiss-keyboard"
          >
            <Text
              className="text-3xl font-bold mb-3"
              style={{ color: isDark ? TEXT.dark.primary : TEXT.light.primary }}
              accessibilityRole="header"
            >
...
