appId: com.sofibaby.app

---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: "new-owner-welcome-screen"
    timeout: 60000
- tapOn:
    id: "start-tracking-button"
- tapOn:
    id: "continue-on-device-button"
- tapOn:
    id: "owner-baby-name"
- inputText: "Test Baby"
- tapOn:
    id: "dismiss-keyboard"
- tapOn:
    id: "owner-baby-birth-date"
- runFlow:
    when:
      platform: iOS
    commands:
      - swipe:
          start: "60%,85%"
          end: "60%,75%"
      - tapOn:
          id: "owner-baby-birth-date-done"
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "OK"
- tapOn:
    id: "owner-baby-gender-female"
- scrollUntilVisible:
    element:
      id: "owner-baby-continue"
    direction: DOWN
    timeout: 10000
- tapOn:
    id: "owner-baby-continue"
- extendedWaitUntil:
    visible:
      id: "skip-remaining-setup-button"
    timeout: 15000
- tapOn:
    id: "skip-remaining-setup-button"
- extendedWaitUntil:
    visible:
      id: "home-screen"
    timeout: 15000
- runFlow:
    when:
      visible: ".*Open debugger to view warnings.*"
    commands:
      - tapOn:
          point: "95%,92%"
- waitForAnimationToEnd
